--- a/index.html
+++ b/index.html
@@ -1,44 +1,21 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>ETG Home</title>
-	
-	
-<link href="css/style.css" rel="stylesheet" type="text/css">
-<link href="css/layout.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <title>Echo Tone Guitars</title>
+  <link href="css/layout.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Slackey&display=swap" rel="stylesheet">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;700&display=swap" rel="stylesheet">
 </head>
 	
 	
 <body>
 	
-	<div id="page_wrapper_home">
-		
-		<div id="top_banner">
-			
-       	  <div id="etg_logo"><img src="images/ETG_logo.png" width="180" height="105" alt=""/></div>
-			
-          <div id="guitars_tab"><h4>GUITARS</h4></div>
-		  <div id="amps_tab"><h4>AMPS</h4></div>
-		  <div id="pedals_tab"><h4>PEDALS</h4></div>
-		  <div id="parts_tab"><h4>PARTS</h4></div>
-		
-      </div>
-		
-	  <div id="homepage_img"><img src="images/sam_greenberg.png" width="1368" height="1357" alt=""/></div>
-	  <div id="homepage_coverup"></div>
-	
-    </div>
-		
+
 		
 </body>
 	
