--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 	
 <body>
 	
-
+<div class="top-banner">
+    <img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo">
+    <nav class="nav">
+      <a href="#''">GUITARS</a>
+      <a href="#">AMPS</a>
+      <a href="pedals.html">PEDALS</a>
+      <a href="#">PARTS</a>
+    </nav>
+  </div>
 		
 </body>
 	
