--- a/index.html
+++ b/index.html
@@ -15,16 +15,25 @@
 	
 <body>
 	
-<div class="top-banner">
-    <img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo">
-    <nav class="nav">
-      <a href="#''">GUITARS</a>
-      <a href="#">AMPS</a>
-      <a href="pedals.html">PEDALS</a>
-      <a href="#">PARTS</a>
-    </nav>
-  </div>
-		
+	<div class="top-banner">
+    	<img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo">
+    	<nav class="nav">
+     	 <a href="#''">GUITARS</a>
+     	 <a href="#">AMPS</a>
+     	 <a href="pedals.html">PEDALS</a>
+      	<a href="#">PARTS</a>
+   	 </nav>
+ 	</div>
+	
+	<div class="main">
+    	<img src="images/sam_greenberg.png" alt="">
+   	 <div class="main-text">
+     	 <h3>SIGNATURE SERIES</h3>
+     	 <h1>SAM GREENBERG ACOUSTIC SERIES</h1>
+    	  <a href="#" class="button">EXPLORE NOW</a>
+   	 </div>
+  	</div>
+	
 </body>
 	
     
