--- a/index.html
+++ b/index.html
@@ -16,14 +16,22 @@
 <body>
 	
 	<div class="top-banner">
-    	<img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo">
-    	<nav class="nav">
-     	 <a href="#''">GUITARS</a>
-     	 <a href="#">AMPS</a>
-     	 <a href="pedals.html">PEDALS</a>
-      	<a href="#">PARTS</a>
-   	 </nav>
- 	</div>
+  <img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo">
+
+  <nav class="nav">
+    <a href="#">GUITARS</a>
+    <a href="#">AMPS</a>
+    <a href="pedals.html">PEDALS</a>
+    <a href="#">PARTS</a>
+  </nav>
+
+  <div class="nav-stuff">
+    <img src="images/search_bar.png" width="200" height="54" alt=""/>
+<button class="cart-button">
+      <img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart-icon">
+    </button>
+  </div>
+</div>
 	
 	<div class="main">
     	<img src="images/sam_greenberg.png" alt="">
@@ -33,6 +41,48 @@
     	  <a href="#" class="button">EXPLORE NOW</a>
    	 </div>
   	</div>
+	
+	<section class="new-in">
+    <h2>NEW IN</h2>
+    <div class="products">
+      <div class="product-card">
+        <img src="images/florist.png" alt="Florist Pedal">
+        <p>Benson Amps × Non-human Audio Florist</p>
+        <p>$469.00</p>
+        <button>ADD TO CART</button>
+      </div>
+      <div class="product-card">
+        <img src="images/lightspeed.png" alt="Lightspeed Pedal">
+        <p>Greer Lightspeed Guitar Pedal</p>
+        <p>$409.00</p>
+        <button>ADD TO CART</button>
+      </div>
+      <div class="product-card">
+        <img src="images/preamp.png" alt="Preamp Pedal">
+        <p>Benson Germanium Preamp Pedal</p>
+        <p>$469.00</p>
+        <button>ADD TO CART</button>
+      </div>
+      <div class="product-card">
+        <img src="images/fuzz.png" alt="Fuzz Pedal">
+        <p>Benson Germanium Fuzz Pedal</p>
+        <p>$529.00</p>
+        <button>ADD TO CART</button>
+      </div>
+    </div>
+  </section>
+	
+	  <section class="split-banner">
+    <div class="half">
+      <img src="images/pedals.png" alt="Shop Pedals">
+      <a href="#" class="button-overlay">SHOP PEDALS</a>
+    </div>
+    <div class="half">
+      <img src="images/theory.png" alt="Shop Theory">
+      <a href="#" class="button-overlay">SHOP THEORY</a>
+    </div>
+  </section>
+	
 	
 </body>
 	
