--- a/index.html
+++ b/index.html
@@ -90,6 +90,27 @@
     	</div>
     </section>
 	
+	<footer class="footer">
+   		<div class="footer-col">
+      		<h3>Shop</h3>
+      		<p>Guitars<br>Amps<br>Pedals<br>Effects<br>Parts</p>
+    	</div>
+    	<div class="footer-col">
+      		<h3>About Us</h3>
+      		<p>Who We Are<br>Our Guitars<br>Sell With Us<br>Repairs</p>
+    	</div>
+   	  <div class="footer-col">
+      		<h3>Need Help?</h3>
+      		<p>Buyer's Guide<br>FAQ<br>Shipping and Returns<br>Contact us</p>
+    	</div>
+    	<div class="footer-col">
+      		<h3>Stay in touch!</h3>
+      		<input type="email" placeholder="Email">
+      		<a href="#" class="button">Sign Me Up!</a>
+			
+    	</div>
+  </footer>
+	
 	
 </body>
 	
