--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 	
 <body>
 	
-<div class="top_banner">
-    	<img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo">
+<div class="top_banner"> <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
     	<nav class="nav">
    	    	<a href="#">GUITARS</a>
-        	<a href="#">AMPS</a>
-    		<a href="pedals.html">PEDALS</a>
+        	<a href="amps_1.html">AMPS</a>
+    		<a href="#">PEDALS</a>
     		<a href="#">PARTS</a>
   		</nav>
 
