long overdue updates!

--- a/index.html
+++ b/index.html
@@ -41,34 +41,48 @@
   	</div>
 	
 <section class="new_in">
-    <h2>NEW IN</h2>
-    <div class="products">
-      <div class="product_card">
-        <img src="images/florist.png" alt="Florist Pedal">
-        <p>Benson Amps × Non-human Audio Florist</p>
-        <p>$469.00</p>
-        <button>ADD TO CART</button>
-      </div>
-      <div class="product_card">
-        <img src="images/lightspeed.png" alt="Lightspeed Pedal">
-        <p>Greer Lightspeed Guitar Pedal</p>
-        <p>$409.00</p>
-        <button>ADD TO CART</button>
-      </div>
-      <div class="product_card">
-        <img src="images/preamp.png" alt="Preamp Pedal">
-        <p>Benson Germanium Preamp Pedal</p>
-        <p>$469.00</p>
-        <button>ADD TO CART</button>
-      </div>
-      <div class="product_card">
-        <img src="images/fuzz.png" alt="Fuzz Pedal">
-        <p>Benson Germanium Fuzz Pedal</p>
-        <p>$529.00</p>
-        <button>ADD TO CART</button>
-      </div>
-    </div>
-  </section>
+	<h2>NEW IN</h2>
+    <div class="homepage_products">
+		
+    	<div class="product">
+    		<div class="product-image">
+            	<img src="images/florist.png" alt="Benson Amps x Non-human Audio Florist">
+            </div>
+			
+            <div class="product-title">Benson Amps x Non-human Audio Florist</div>
+            <div class="product-price">$469.00</div>
+            <button class="button">ADD TO CART</button>
+		</div>
+		
+	    <div class="product">
+        	<div class="product-image">
+            	<img src="images/lightspeed.png" alt="Greer Lightspeed Guitar Pedal">
+            </div>
+            <div class="product-title">Greer Lightspeed Guitar Pedal</div>
+            <div class="product-price">$409.00</div>
+            <button class="button">ADD TO CART</button>
+		</div>
+		
+		<div class="product">
+        	<div class="product-image">
+            	<img src="images/preamp.png" alt="Benson Germanium Preamp Pedal">
+            </div>
+            <div class="product-title">Benson Germanium Preamp Pedal</div>
+            <div class="product-price">$469.00</div>
+            <button class="button">ADD TO CART</button>
+        </div>
+		
+		<div class="product">
+        	<div class="product-image">
+            	<img src="images/fuzz.png" alt="Benson Germanium Fuzz Pedal">
+            </div>
+            <div class="product-title">Benson Germanium Fuzz Pedal</div>
+            <div class="product-price">$529.00</div>
+            <button class="button">ADD TO CART</button>
+        </div>
+		
+	</div>   
+</section>
 	
 <section class="split_banner">
     	<div class="half">
@@ -106,8 +120,8 @@
       		<h3>Stay in touch!</h3>
       		<input type="email" placeholder="Email">
       		<a href="#" class="button">Sign Me Up!</a>
-			
-    	</div>
+		
+        </div>
   </footer>
 	
 	
