--- a/amps_1.html
+++ b/amps_1.html
@@ -60,10 +60,12 @@
    
 			
             <div class="product">
-                <div class="product-image">
-                    <img src="images/fender_tone_master_blonde.png" alt="Fender Tone Master Deluxe Reverb Blonde Amplifier">
+                <div class="product-image"> 
+					<a href="product_1.html">
+						<img src="images/fender_tone_master_blonde.png" alt="Fender Tone Master Deluxe Reverb Blonde Amplifier">
+					</a>
                 </div>
-                <div class="product-title">Fender Tone Master Deluxe Reverb Blonde Amplifier</div>
+                <div class="product-title"><a href="product_1.html" style="font-weight: bold; color: #000000; text-decoration: none">Fender Tone Master Deluxe Reverb Blonde Amplifier</a></div>
                 <div class="product-price">$1,569.00</div>
                 <button class="button">ADD TO CART</button>
             </div>
@@ -80,10 +82,13 @@
 
 
             <div class="product">
-                <div class="product-image">
-                    <img src="images/fender_mustang_LT25.png" alt="Fender Mustang LT25 Amplifier">
+                <div class="product-image"> 
+					<a href="product_2.html">
+						<img src="images/fender_mustang_LT25.png" alt="Fender Mustang LT25 Amplifier">
+					</a>
                 </div>
-                <div class="product-title">Fender Mustang LT25 Amplifier</div>
+                <div class="product-title"><a href="product_2.html" style="font-weight: bold; color: #000000; text-decoration: none">Fender Mustang LT25 Amplifierr</a>
+				</div>
               <div class="product-price">$329.00</div>
                 <button class="button">ADD TO CART</button>
             </div>
