--- a/amps_1.html
+++ b/amps_1.html
@@ -11,6 +11,14 @@
 	
   <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
 	
+  <style>
+	  h3 {
+		  font-size: 1.5vw;
+		  padding-bottom: 40px;
+	     }
+	  
+  </style>
+	
 </head>
 
 <body>
@@ -65,7 +73,7 @@
 						<img src="images/fender_tone_master_blonde.png" alt="Fender Tone Master Deluxe Reverb Blonde Amplifier">
 					</a>
                 </div>
-                <div class="product-title"><a href="product_1.html" style="font-weight: bold; color: #000000; text-decoration: none">Fender Tone Master Deluxe Reverb Blonde Amplifier</a></div>
+                <div class="product-title"><a href="product_1.html" style="font-weight: bold; color: #000000; text-decoration: none"><h3>Fender Tone Master Deluxe Reverb Blonde Amplifier</h3></a></div>
                 <div class="product-price">$1,569.00</div>
                 <button class="button">ADD TO CART</button>
             </div>
@@ -75,7 +83,7 @@
                 <div class="product-image">
                     <img src="images/laney_LA30BL.png" alt="Laney LA30BL Black Country Customs Supergroup">
                 </div>
-                <div class="product-title">Laney LA30BL Black Country Customs Supergroup</div>
+				<div class="product-title"><h3>3Laney LA30BL Black Country Customs Supergroup</h3></div>
                 <div class="product-price">$1,599.00</div>
                 <button class="button">ADD TO CART</button>
             </div>
@@ -87,7 +95,7 @@
 						<img src="images/fender_mustang_LT25.png" alt="Fender Mustang LT25 Amplifier">
 					</a>
                 </div>
-                <div class="product-title"><a href="product_2.html" style="font-weight: bold; color: #000000; text-decoration: none">Fender Mustang LT25 Amplifierr</a>
+                <div class="product-title"><a href="product_2.html" style="font-weight: bold; color: #000000; text-decoration: none"><h3>Fender Mustang LT25 Amplifier</h3></a>
 				</div>
               <div class="product-price">$329.00</div>
                 <button class="button">ADD TO CART</button>
