--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			
             <div class="product-title">Benson Amps x Non-human Audio Florist</div>
             <div class="product-price">$469.00</div>
-            <button class="button">ADD TO CART</button>
+            <button class="add-to-cart">ADD TO CART</button>
 		</div>
 		
 	    <div class="product">
@@ -63,7 +63,7 @@
             </div>
             <div class="product-title">Greer Lightspeed Guitar Pedal</div>
             <div class="product-price">$409.00</div>
-            <button class="button">ADD TO CART</button>
+            <button class="add-to-cart">ADD TO CART</button>
 		</div>
 		
 		<div class="product">
@@ -72,7 +72,7 @@
             </div>
             <div class="product-title">Benson Germanium Preamp Pedal</div>
             <div class="product-price">$469.00</div>
-            <button class="button">ADD TO CART</button>
+            <button class="add-to-cart">ADD TO CART</button>
         </div>
 		
 		<div class="product">
@@ -81,7 +81,7 @@
             </div>
             <div class="product-title">Benson Germanium Fuzz Pedal</div>
             <div class="product-price">$529.00</div>
-            <button class="button">ADD TO CART</button>
+            <button class="add-to-cart">ADD TO CART</button>
         </div>
 		
 	</div>   
