--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
+	
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 </head>
 	
@@ -19,12 +22,15 @@
 <body>
 	
 <div class="top_banner"> <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
-    	<nav class="nav">
-   	    	<a href="#">GUITARS</a>
-        	<a href="amps_1.html">AMPS</a>
+	    <button class="hamburger" onclick="toggleMenu()">☰</button>
+    	<div class="nav-container">
+	    <nav class="nav">
+    		<a href="#">GUITARS</a>
+    		<a href="amps_1.html">AMPS</a>
     		<a href="#">PEDALS</a>
     		<a href="#">PARTS</a>
-  		</nav>
+        </nav>
+</div>
 
   		<div class="nav_stuff">
     		<img src="images/search_bar.png" width="200" height="54" alt=""/>
@@ -127,6 +133,12 @@
         </div>
   </footer>
 	
+  <script>
+      function toggleMenu() {
+      const navContainer = document.querySelector('.nav-container');
+      navContainer.classList.toggle('active');
+  	  }
+  </script>
 	
 </body>
 	
