--- a/product_2.html
+++ b/product_2.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
 
+<script src="js/cart.js"></script>	
 	
 <style>
   body {
@@ -36,7 +37,7 @@
 
 <body>
 	
-<div class="top_banner"> <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
+	<div class="top_banner"> <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
     	<nav class="nav">
    	    	<a href="#">GUITARS</a>
         	<a href="amps_1.html">AMPS</a>
@@ -46,8 +47,7 @@
 
   		<div class="nav_stuff">
     		<img src="images/search_bar.png" width="200" height="54" alt=""/>
-			<button class="cart_button">
-      			<img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon">
+			<button class="cart_button"> <a href="cart.html"><img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon"></a>
     		</button>
   		</div>
 	</div>
@@ -60,7 +60,7 @@
                 <div class="product-info-box">
 					<h1 class="product-title">Fender Mustang LT25 Amplifier</h1>
                     <p class="product-price">$359.00</p>
-                    <button class="add-to-cart">ADD TO CART</button>
+					<button class="add-to-cart" onclick="addToCart('Fender Mustang LT25 Amplifier', 359.00)">Add to Cart</button>
                 </div>
                 
                 <div class="features-box">
@@ -131,7 +131,29 @@
                 </div>
             </div>
         </div>
-</div>
+	</div>
+	
+	<footer class="footer">
+   		<div class="footer-col">
+      		<h3>Shop</h3>
+      		<p>Guitars<br>Amps<br>Pedals<br>Effects<br>Parts</p>
+    	</div>
+    	<div class="footer-col">
+      		<h3>About Us</h3>
+      		<p>Who We Are<br>Our Guitars<br>Sell With Us<br>Repairs</p>
+    	</div>
+   	  <div class="footer-col">
+      		<h3>Need Help?</h3>
+      		<p>Buyer's Guide<br>FAQ<br>Shipping and Returns<br>Contact us</p>
+    	</div>
+    	<div class="footer-col">
+      		<h3>Stay in touch!</h3>
+      		<input type="email" placeholder="Email">
+      		<a href="#" class="button">Sign Me Up!</a>
+		
+        </div>
+	</footer>
+	
 </body>
 </html>	
 
