--- a/cart.html
+++ b/cart.html
@@ -10,15 +10,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
 
-<script src="js/cart.js">
+<script src="js/cart.js"> </script>
+<script>
   document.addEventListener('DOMContentLoaded', function () {
     updateCartDisplay();
   });
 </script>
-
-<style>
-  }
-</style>
 
 </head>
 
@@ -35,9 +32,14 @@
 
   		<div class="nav_stuff">
     		<img src="images/search_bar.png" width="200" height="54" alt=""/>
-			<button class="cart_button"> 
-                <a href="cart.html"><img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon"></a>
-    		</button>
+			
+                <a href="cart.html" class="cart_button">
+					<div class="cart_icon_container">
+						<img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon">
+						<span id="cart-count-badge" class="cart-badge">0</span>
+					</div>
+				</a>
+    		
   		</div>
 	</div>
     
@@ -63,7 +65,7 @@
                     <span>TOTAL</span>
                     <span id="grand-total">$25</span>
                 </div>
-                <button class="checkout-btn">CHECKOUT</button>
+                <a href="payment.html"><button class="checkout-btn">CHECKOUT</button></a>
             </div>
         </div>
     </div>
@@ -94,8 +96,11 @@
 	</footer>
 	
 	<script>
-    document.addEventListener('DOMContentLoaded', updateCartDisplay);
-</script>
+		document.addEventListener('DOMContentLoaded', () => {
+  			updateCartDisplay();
+  			updateCartCountBadge();;
+		});
+	</script>
 	
 </body>
 </html>
