reorganizing css to make mobile size base case!!

--- a/product_1.html
+++ b/product_1.html
@@ -37,7 +37,8 @@
 
 <body>
 	
-	<div class="top_banner"> <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
+	<div class="top_banner"> 
+        <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
     	<nav class="nav">
    	    	<a href="#">GUITARS</a>
         	<a href="amps_1.html">AMPS</a>
@@ -47,12 +48,14 @@
 
   		<div class="nav_stuff">
     		<img src="images/search_bar.png" width="200" height="54" alt=""/>
-			<a href="cart.html" class="cart_button">
+			
+                <a href="cart.html" class="cart_button">
 					<div class="cart_icon_container">
 						<img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon">
 						<span id="cart-count-badge" class="cart-badge">0</span>
 					</div>
 				</a>
+    		
   		</div>
 	</div>
     
