--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 	
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <script src="js/cart.js"></script>
-	
+
 </head>
 	
 	
@@ -35,12 +34,9 @@
 
   		<div class="nav_stuff">
     		<img src="images/search_bar.png" width="200" height="54" alt=""/>
-			<a href="cart.html" class="cart_button">
-					<div class="cart_icon_container">
-						<img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon">
-						<span id="cart-count-badge" class="cart-badge">0</span>
-					</div>
-				</a>
+			<button class="cart_button">
+      			<img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon">
+    		</button>
   		</div>
 	</div>
 	
@@ -145,7 +141,7 @@
       document.addEventListener('DOMContentLoaded', () => {
   	      updateCartDisplay();
           updateCartCountBadge();;
-	  });
+		});
   </script>
 	
 </body>
