not doing the prev idea - ignore!
adding hamburger menu functionality to all pages and (attempting) to make the colour of the menu black.

--- a/cart.html
+++ b/cart.html
@@ -23,12 +23,16 @@
 	
 	<div class="top_banner"> 
         <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
-    	<nav class="nav">
-   	    	<a href="#">GUITARS</a>
-        	<a href="amps_1.html">AMPS</a>
-    		<a href="#">PEDALS</a>
-    		<a href="#">PARTS</a>
-  		</nav>
+    	<button class="hamburger" onclick="toggleMenu()">☰</button>
+    	<div class="nav-container">
+	    	<nav class="nav">
+    			<a href="#">GUITARS</a>
+    			<a href="amps_1.html">AMPS</a>
+    			<a href="#">PEDALS</a>
+    			<a href="#">PARTS</a>
+        	</nav>
+		</div>
+
 
   		<div class="nav_stuff">
     		<img src="images/search_bar.png" width="200" height="54" alt=""/>
