--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	
   <link href="css/layout.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
+	
+  <script src="js/cart.js"> </script>
+  <script src="js/menu.js"> </script>	
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
