--- a/payment.html
+++ b/payment.html
@@ -5,6 +5,9 @@
 <title>payment</title>
 <link href="css/layout.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
+	
+<script src="js/cart.js"> </script>
+<script src="js/menu.js"> </script>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
