--- a/amps_1.html
+++ b/amps_1.html
@@ -11,7 +11,8 @@
 	
   <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
 	
-  <script src="js/cart.js"></script>
+  <script src="js/cart.js"> </script>
+  <script src="js/menu.js"> </script>
 	
 </head>
 
