--- a/cart.html
+++ b/cart.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
 
 <script src="js/cart.js"> </script>
+<script src="js/menu.js"> </script>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     updateCartDisplay();
