--- a/product_1.html
+++ b/product_1.html
@@ -10,7 +10,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Slackey&display=swap" rel="stylesheet">
 
-<script src="js/cart.js"></script>
+<script src="js/cart.js"> </script>
+<script src="js/menu.js"> </script>
 	
 <style>
   body {
