--- a/amps_1.html
+++ b/amps_1.html
@@ -231,13 +231,10 @@
 	</footer>
 	
 	<script>
-      function toggleMenu() {
-      const navContainer = document.querySelector('.nav-container');
-      navContainer.classList.toggle('active');
-  	  }
       document.addEventListener('DOMContentLoaded', () => {
   	      updateCartDisplay();
           updateCartCountBadge();;
+		  toggleMenu();
 		});
   </script>
 	
