working hamburger menu!

--- a/cart.html
+++ b/cart.html
@@ -101,10 +101,13 @@
 	</footer>
 	
 	<script>
-		document.addEventListener('DOMContentLoaded', () => {
-  			updateCartDisplay();
-  			updateCartCountBadge();;
-		});
+	  function toggleMenu() {
+      const navContainer = document.querySelector('.nav-container');
+      navContainer.classList.toggle('active');
+  	  }
+      document.addEventListener('DOMContentLoaded', () => {
+  	      updateCartDisplay();
+          updateCartCountBadge();;
 	</script>
 	
 </body>
