--- a/payment.html
+++ b/payment.html
@@ -128,10 +128,13 @@
 	</footer>
 	
 	<script>
-    	document.addEventListener('DOMContentLoaded', () => {
-  			updateCartDisplay();
-  			updateCartCountBadge();;
-		});
+      function toggleMenu() {
+      const navContainer = document.querySelector('.nav-container');
+      navContainer.classList.toggle('active');
+  	  }
+      document.addEventListener('DOMContentLoaded', () => {
+  	      updateCartDisplay();
+          updateCartCountBadge();;
 	</script>
 </body>
 </html>
