--- a/product_1.html
+++ b/product_1.html
@@ -170,10 +170,13 @@
 	</footer>
 	
 	<script>
-    	document.addEventListener('DOMContentLoaded', () => {
-  			updateCartDisplay();
-  			updateCartCountBadge();;
-		});
+      function toggleMenu() {
+      const navContainer = document.querySelector('.nav-container');
+      navContainer.classList.toggle('active');
+  	  }
+      document.addEventListener('DOMContentLoaded', () => {
+  	      updateCartDisplay();
+          updateCartCountBadge();;
 	</script>
 	
 </body>
