--- a/cart.html
+++ b/cart.html
@@ -12,11 +12,8 @@
 
 <script src="js/cart.js"> </script>
 <script src="js/menu.js"> </script>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    updateCartDisplay();
-  });
-</script>
+	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
