--- a/payment.html
+++ b/payment.html
@@ -8,6 +8,8 @@
 	
 <script src="js/cart.js"> </script>
 <script src="js/menu.js"> </script>
+	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
