--- a/product_2.html
+++ b/product_2.html
@@ -13,6 +13,8 @@
 <script src="js/cart.js"> </script>
 <script src="js/menu.js"> </script>
 	
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 <style>
   body {
     margin: 0;
