--- a/amps_1.html
+++ b/amps_1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>amps_1</title>
+<title>Amps</title>
   <link href="css/layout.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
 
@@ -33,14 +33,14 @@
 
 
   		<div class="nav_stuff">
-    		<img src="images/search_bar.png" width="200" height="54" alt=""/>
+    		<img src="images/search_bar.png" alt="" width="200" height="54" class="search_icon"/>
 			<a href="cart.html" class="cart_button">
 					<div class="cart_icon_container">
 						<img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon">
 						<span id="cart-count-badge" class="cart-badge">0</span>
 					</div>
-				</a>
-  		</div>
+		  </a>
+	  </div>
 	</div>
 	
 	
