--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Your Cart - Echo Tone Guitars</title>
+<title>Cart</title>
 <link href="css/layout.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 	
