--- a/product_2.html
+++ b/product_2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>product 1</title>
+<title>Fender Mustang LT25 Amplifier</title>
 <link href="css/layout.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 	
