--- a/product_1.html
+++ b/product_1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>product 1</title>
+<title>Fender Tone Master Deluxe Reverb Blonde Amplifier</title>
 <link href="css/layout.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 	
