--- a/payment.html
+++ b/payment.html
@@ -104,8 +104,10 @@
         <input type="text" placeholder="Name on card">
       </div>
 
-      <button class="checkout-btn" type="submit">CHECKOUT</button>
     </form>
+	  
+	  <a href="order_confirm.html"><button class="checkout-btn">CHECKOUT</button></a>
+	  
   </div>
 
   	<footer class="footer">
