--- a/product_2.html
+++ b/product_2.html
@@ -67,7 +67,7 @@
 	</div>
     
     <div class="container">
-		<a href="amps_1.html" class="back-link"><p>Back</p></a>
+		<a href="amps_1.html"><p>Back</p></a>
         
         <div class="product-grid">
             <div class="left-column">
