--- a/product_2.html
+++ b/product_2.html
@@ -40,8 +40,7 @@
 
 <body>
 	
-	<div class="top_banner"> 
-        <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
+	<div class="top_banner"> <a href="index.html"><img src="images/ETG_logo.png" class="logo" alt="Echo Tone Guitars Logo"></a>
     	<button class="hamburger" onclick="toggleMenu()">☰</button>
     	<div class="nav-container">
 	    	<nav class="nav">
@@ -54,16 +53,14 @@
 
 
   		<div class="nav_stuff">
-    		<img src="images/search_bar.png" width="200" height="54" alt=""/>
-			
-                <a href="cart.html" class="cart_button">
+    		<img src="images/search_bar.png" alt="" width="200" height="54" class="search_icon"/>
+			<a href="cart.html" class="cart_button">
 					<div class="cart_icon_container">
 						<img src="images/cart.png" alt="cart icon" width="53" height="42" class="cart_icon">
 						<span id="cart-count-badge" class="cart-badge">0</span>
 					</div>
-				</a>
-    		
-  		</div>
+		  </a>
+	  </div>
 	</div>
     
     <div class="container">
