--- a/order_confirm.html
+++ b/order_confirm.html
@@ -86,7 +86,7 @@
                 <div class="detail-label">Payment</div>
                 <div class="detail-value">
                     Card ending with 4 -<br>
-                    $ 25
+                    $ <span id="grand-total">0&nbsp;</span>
                 </div>
             </div>
         </div>
